gobmkida/c3/routine_to_string
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/routine_to_string/src/engine/printutils.c:837:8: error: use of undeclared identifier 'off_4A8658'
return off_4A8658[routine]; 
       ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/routine_to_string/src/obj/1/printutils.o] Error 1
